@@ -1,0 +1,17 @@
+kwm: 0.4.6 (patched for QT-1.2)
+kpanel: 0.14.1
+kfm: 0.6.1
+kwmclient: 0.2
+kdisplay: 0.5.2
+kdehelp: 0.4.9
+kghostview: 0.3.3 (bug removed)
+ktetris: 0.2.3
+kmines: 0.6.4
+kpat: 0.3 (patched a lot)
+kview: 0.9
+kpaint: 0.1
+kfind: 0.3
+kedit: 0.3
+kcalc: 0.1
+kacli: 0.5
+kscreensaver: 0.3.3 (patched for QT-1.2)
