@@ -70,14 +70,14 @@ KFMTreeView::KFMTreeView( QWidget *parent ) : QWidget(parent )
   // load the pixmaps we'll be using
 
   QString d = getenv( "KDEDIR" );
-  d += "/lib/pics/closed.gif";
+  d += "/lib/pics/closed.xpm";
   closedPixmap = new QPixmap();
   closedPixmap->load( d.data() );
   if ( closedPixmap->isNull() )
       QMessageBox::message( "KFM Error", "Could not find\n" + d );
   
   d = getenv( "KDEDIR" );
-  d += "/lib/pics/open.gif";
+  d += "/lib/pics/open.xpm";
   openPixmap = new QPixmap();
   openPixmap->load( d.data() );
   if ( openPixmap->isNull() )
