@@ -19,3 +19,5 @@
 	splitt kdebase into kdelibs and kdeapps	
 	updated khtmlw, kfm and kdehelp
 	added kcalc and kpaint
+	updated kdisplay
+	added kscreensaver
